--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@
     padding-bottom: 10px;
 }
 
+.cover-img {
+    width: 160px;
+    height: 220px;
+    padding-bottom: 10px;
+}
+
 .navbar-link{
     border: solid;
     border-color: black;
@@ -187,4 +193,122 @@ footer {
 .navbar-hp2 {
     border-left: black;
     justify-content: space-between;
+}
+
+.search {
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-bottom: 20px;
+}
+
+.kategori {
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-bottom: 20px;
+    margin-top: 100px;
+}
+
+.judul-kategori {
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-top: 30px;
+}
+
+.box-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    background-color: transparent;
+    padding: 10px;
+    gap: 20px;
+}
+
+.box-container2 {
+    display: grid;
+    grid-template-columns: auto auto;
+    border: solid;
+    border-color:white;
+    border-radius: 5px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.box {
+    border-radius: 5px;
+    text-align: center;
+    padding: 20px;
+    width: auto;
+    height: 100px;
+    position: relative;
+    background-color: #eee;
+}
+
+.box p {
+    font-size: 30px;
+    font-weight: 500;
+    padding: 25px;
+}
+
+.box2 {
+    border-radius: 5px;
+    text-align: center;
+    padding: 20px;
+    width: auto;
+    height: 100px;
+    position: relative;
+    background-color: #eee;
+}
+.box:hover{
+    background-color: #BD9696;
+    border: 2px solid whitesmoke;
+    padding: 15px;
+    transition: 0.4s;
+}
+
+.kategori-img{
+    width:100%;
+    height: 200px;
+    max-width: 200px;
+    margin: 0.3rem;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.kategori-box {
+    display: flex;
+    flex-direction: row;
+    padding-top: 15px;
+    padding-left: 15px;
+}
+
+.kategori-text {
+    padding-left: 10px;
+}
+
+.write-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 15px;
+}
+
+.write-body {
+    display: flex;
+    flex-direction: row;
+    padding: 20px 150px 20px 150px;
+}
+
+.write-img {
+    padding: 10px;
+}
+
+.write-cover {
+    height: 300px;
+    width: 220px;
+}
+
+.write-container {
+    border: solid;
+    border-color:white;
+    border-radius: 5px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    padding-top: 10px;
 }
