--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 20px 22px 5px 22px; 
+    margin: 0px 0px 5px 0px; 
+    padding: 0px 20px 0px 20px;
 }
 
 .logo {
