--- a/css/styleNav.css
+++ b/css/styleNav.css
@@ -10,7 +10,7 @@
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background: #f5f5f5;
+    background: #fffdfd;
 }
 ::-webkit-scrollbar-thumb {
     background: #d3a1a1;
@@ -21,28 +21,48 @@
 .content{
   max-width: 100%;
   margin: auto;
-  padding: 0px 100px;
 }
+
+.box {
+    background-color: rgba(255, 255, 255, 0.493);
+    backdrop-filter: blur(50px);
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+  }  
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 2% 2.2% 0.5% 2.2%;
     position: fixed;
     top: 0;
+    right: 0;
     left: 0;
-    width: 96%;
+    padding: 20px 150px 20px 150px;
+    width: 100%;
     z-index: 1000;
     transition: 0.5s;
   }
   
   .navbar.sticky {
-    padding: 1% 0;
-    background: #ecb8b8;
-    box-shadow: 0px 3px 5px 0px rgba(217, 156, 156, 0.1);
+    padding: 20px 150px 20px 150px;
+    background: #fcfcfc;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
   }
-  
+  .ReadMe_Logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+    margin-right: 20px;
+  }
   .navbar .content {
     display: flex;
     flex: 1;
@@ -58,7 +78,11 @@
     font-size: 3vw;
     font-weight: 600;
     text-decoration: none;
-  }  
+  }
+  .navbar .logo img {
+    width: 10px;
+    height: 10px;
+  } 
 
 .menu-list {
     display: flex;
@@ -97,7 +121,7 @@
   text-align: justify;
 }
 .icon{
-  color: #000000;
+  color: #ffffff;
   font-size: 20px;
   cursor: pointer;
   display: none;
@@ -138,7 +162,7 @@
     left: 0;
     height: 100vh;
     width: 100%;
-    background: #222;
+    background: #d3a1a1;
     display: block;
     padding: 40px 0;
     text-align: center;
