--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@
        display: flex;
        flex-direction: row;
        justify-content: space-between;
-       padding: 15px;
+       padding: 200px 200px 1px 215px;
    }
    
    .write-body {
@@ -308,8 +308,8 @@
        justify-content: space-between;
        margin-left: 200px;
        margin-right: 200px;
-       margin-top: 50px;
-       margin-bottom: 20px;
+       margin-top: 5px;
+       margin-bottom: 100px;
    }
    
    .write-img {
