--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@
    .search {
        margin-left: 150px;
        margin-right: 150px;
-       margin-bottom: 150px;
+       margin-bottom: 50px;
        margin-top: 100px;
    }
    
@@ -246,7 +246,7 @@
    .box2 p {
        font-size: 30px;
        font-weight: 500;
-       padding: 25px;
+       padding: 10px;
    }
    
    .box2 {
@@ -258,7 +258,7 @@
        position: relative;
        background-color: #eee;
    }
-   .box:hover{
+   .box2:hover{
        background-color: #BD9696;
        border: 2px solid whitesmoke;
        padding: 15px;
@@ -299,9 +299,22 @@
        display: flex;
        flex-direction: row;
        justify-content: space-between;
-       padding: 180px 200px 1px 215px;
    }
    
+   .write-nav2 {
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+}
+
+.write-nav3 {
+    margin: 10px;
+}
+
+.write-btn {
+    margin: 25px;
+}
+
    .write-body {
        display: flex;
        flex-direction: row;
@@ -355,7 +368,38 @@
    }
    
    .writeStory-img {
-       height: 70px;
-       width: 40px;
+       height: 80px;
+       width: 50px;
    }
+   
+   .write-st{
+    margin: 50px 200px 600px 200px;
+   }
+
+   .write-st2 form{
+    display: flex;
+    flex-direction: column;
+   }
+
+   .write-jdl {
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: groove;
+    background-color: transparent;
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+   }
+
+   .write-isi {
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: hidden;
+    background-color: transparent;
+    margin: 10px;
+    padding: 10px;
+   }
+
    
