--- a/css/index.css
+++ b/css/index.css
@@ -1,85 +1,3 @@
-.footer-child {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: var(--color-gray-100);
-  border: 1px solid var(--color-black);
-  box-sizing: border-box;
-  width: 1512px;
-  height: 313px;
-}
-.about-us {
-  position: absolute;
-  top: 59.62px;
-  left: 702.47px;
-  display: inline-block;
-  width: 108.16px;
-  height: 27.52px;
-}
-.instagram,
-.twitter {
-  top: 0;
-  display: inline-block;
-  width: 76.47px;
-}
-.instagram {
-  position: absolute;
-  left: 0;
-  height: 21.78px;
-}
-.twitter {
-  left: 91.77px;
-}
-.instagram-parent,
-.pinterest,
-.twitter {
-  position: absolute;
-  height: 21.78px;
-}
-.pinterest {
-  top: 0;
-  left: 183.54px;
-  display: inline-block;
-  width: 76.47px;
-}
-.instagram-parent {
-  top: 231.6px;
-  left: 625.99px;
-  width: 260.01px;
-  font-size: var(--font-size-base);
-  font-family: var(--font-molengo);
-}
-.our-journal-planner,
-.our-social-media {
-  position: absolute;
-  display: inline-block;
-}
-.our-social-media {
-  top: 186.88px;
-  left: 647.84px;
-  width: 217.4px;
-  height: 27.52px;
-}
-.our-journal-planner {
-  top: 104.33px;
-  left: 336.49px;
-  font-size: var(--font-size-base);
-  font-family: var(--font-molengo);
-  width: 839.03px;
-  height: 65.35px;
-}
-.footer,
-.group-child {
-  position: absolute;
-  left: 0;
-}
-.footer {
-  top: 1562px;
-  width: 1512px;
-  height: 313px;
-  color: var(--color-white);
-  font-family: var(--font-oriya-mn);
-}
 .group-child {
   top: 0;
   border-radius: var(--br-8xs);
@@ -126,21 +44,21 @@
 }
 .trending {
   top: 0;
-  left: 0;
+  left: 63px;
   font-size: var(--font-size-11xl);
   width: 271px;
   height: 50px;
 }
 .jangan-lupa-baca {
   top: 40px;
-  left: 37px;
+  left: 63px;
   width: 509px;
   height: 41px;
 }
 .group-container {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 40px;
   width: 1117px;
   height: 470px;
 }
@@ -173,7 +91,8 @@
 }
 .group-parent {
   top: 139px;
-  left: 160px;
+  left: 196px;
+  right: 360px;
   width: 1117px;
   height: 470px;
 }
@@ -190,7 +109,9 @@
 .kategori {
   position: absolute;
   top: 617px;
-  left: 237px;
+  left: 313px;
+  margin-top: 0;
+  margin-left: 0;
 }
 .group-child2 {
   top: 1.25px;
@@ -252,7 +173,7 @@
 .rectangle-group {
   position: absolute;
   top: 648px;
-  left: 237px;
+  left: 313px;
   width: 1027px;
   height: 40px;
 }
@@ -261,7 +182,7 @@
   top: 757px;
   left: 0;
   background-color: #f4f2f2;
-  width: 1512px;
+  width: 100%;
   height: 406px;
 }
 .group-child9 {
@@ -278,7 +199,7 @@
 }
 .parts {
   top: 109px;
-  left: 185px;
+  left: 207px;
   width: 99.52px;
   height: 28.35px;
 }
@@ -290,7 +211,7 @@
 }
 .judul {
   top: 82px;
-  left: 183px;
+  left: 207px;
   font-size: var(--font-size-lg);
   width: 102.21px;
 }
@@ -312,8 +233,8 @@
 }
 .status {
   position: absolute;
-  top: 96.08px;
-  left: 376.58px;
+  top: 92px;
+  left: 380px;
   font-size: var(--font-size-mini);
   color: var(--color-white);
   display: inline-block;
@@ -355,7 +276,8 @@
 }
 .binge-from-start,
 .comedy,
-.horror {
+.horror,
+.drama {
   position: absolute;
   display: inline-block;
   width: 272px;
@@ -365,15 +287,64 @@
   top: 824px;
   left: 215px;
 }
+.action,
+.adventure,
 .comedy,
-.horror {
+.drama,
+.horror,
+.romance,
+.science,
+.thriller {
+  position: absolute;
   top: 656px;
+  left: 340px;
+  display: inline-block;
+  width: 272px;
+  height: 10px;
 }
-.horror {
-  left: 151px;
+.action,
+.adventure,
+.comedy,
+.drama,
+.romance,
+.science,
+.thriller {
+  left: 456px;
 }
-.comedy {
-  left: 277px;
+.action,
+.adventure,
+.drama,
+.romance,
+.science,
+.thriller {
+  left: 578px;
+}
+.action,
+.adventure,
+.romance,
+.science,
+.thriller {
+  left: 690px;
+}
+.adventure,
+.romance,
+.science,
+.thriller {
+  top: 657px;
+  left: 817px;
+}
+.romance,
+.science,
+.thriller {
+  left: 975px;
+}
+.romance,
+.science {
+  left: 1099px;
+}
+.science {
+  left: 1248px;
+  height: 9px;
 }
 .editors-handpicked-favorites,
 .editors-picks {
@@ -388,7 +359,7 @@
 }
 .editors-handpicked-favorites {
   top: 43px;
-  left: 10px;
+  left: 0px;
   font-size: var(--font-size-xl);
   width: 311px;
   height: 32px;
