--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@
        flex-direction: column;
        justify-content: center;
        align-items: center;
+       bottom: 0;
        margin-top: 100;
        margin-bottom: 0;
        background-color: black;
